# libparser

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  changelog.md  control.json  install_criterion.sh  tests_parser
.github/workflows/: cmake.yml  release.yml
includes/: parser.h
sources/: parser.c
tests/: CMakeLists.txt  coverage_report.txt  test_parser.c
tests/functional/: CMakeLists.txt  basic_example.c
tests/unit/: CMakeLists.txt  test_parser.c
